SONAR (FindBugs) Performance - Method invokes inefficient Number constructor; use static valueOf instead