@@ -170,7 +170,7 @@ import iac.grn.serviceitems.HeaderTableItem;
                for(Object[] objectArray :loAppAccess){
             	   try{
             	     ui= new AppAccessItem(
-            	    		objectArray[0]!=null?new Long(objectArray[0].toString()):null,
+            	    		objectArray[0]!=null?Long.valueOf(objectArray[0].toString()):null,
             				objectArray[1]!=null?df.format((Date)objectArray[1]) :"",
             				objectArray[2]!=null?Integer.parseInt(objectArray[2].toString()):0,	
             				objectArray[3]!=null?objectArray[3].toString():"",
@@ -178,14 +178,14 @@ import iac.grn.serviceitems.HeaderTableItem;
             				objectArray[5]!=null?objectArray[5].toString():"",
             				objectArray[6]!=null?objectArray[6].toString():"",
             				 
-            				objectArray[7]!=null?new Long(objectArray[7].toString()):null,
+            				objectArray[7]!=null?Long.valueOf(objectArray[7].toString()):null,
 	            			objectArray[8]!=null?objectArray[8].toString():"",
 	            			objectArray[9]!=null?objectArray[9].toString():"",
 	            			objectArray[10]!=null?objectArray[10].toString():"",
 	            			 
 	            			objectArray[11]!=null?objectArray[11].toString():"",
 	            			 
-	            			objectArray[12]!=null?new Long(objectArray[12].toString()):null,
+	            			objectArray[12]!=null?Long.valueOf(objectArray[12].toString()):null,
 	            			 
 	            			objectArray[13]!=null?objectArray[13].toString():"",
 	            			objectArray[14]!=null?objectArray[14].toString():"",
@@ -387,7 +387,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 	        		   log.info("AppAccessManager:getUserItem:login:"+objectArray[1].toString());
 	        		   
 	        		   ui= new AppAccessItem(
-	        				  objectArray[0]!=null?new Long(objectArray[0].toString()):null,
+	        				  objectArray[0]!=null?Long.valueOf(objectArray[0].toString()):null,
 	            				objectArray[1]!=null?df.format((Date)objectArray[1]) :"",
 	            				objectArray[2]!=null?Integer.parseInt(objectArray[2].toString()):0,	
 	            				objectArray[3]!=null?objectArray[3].toString():"",
@@ -395,14 +395,14 @@ import iac.grn.serviceitems.HeaderTableItem;
 	            				objectArray[5]!=null?objectArray[5].toString():"",
 	            				objectArray[6]!=null?objectArray[6].toString():"",
 	            				 
-	            				objectArray[7]!=null?new Long(objectArray[7].toString()):null,
+	            				objectArray[7]!=null?Long.valueOf(objectArray[7].toString()):null,
 		            			objectArray[8]!=null?objectArray[8].toString():"",
 		            			objectArray[9]!=null?objectArray[9].toString():"",
 		            			objectArray[10]!=null?objectArray[10].toString():"",
 		            			 
 		            			objectArray[11]!=null?objectArray[11].toString():"",
 		            			 
-		            			objectArray[12]!=null?new Long(objectArray[12].toString()):null,
+		            			objectArray[12]!=null?Long.valueOf(objectArray[12].toString()):null,
 		            			 
 		            			objectArray[13]!=null?objectArray[13].toString():"",
 		            			objectArray[14]!=null?objectArray[14].toString():"",
@@ -447,7 +447,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 				  return;
 			 }
 			   
-			 idApp =  new Long(sessionIdAppAccess); 
+			 idApp =  Long.valueOf(sessionIdAppAccess); 
 			   
 			 Object[] app=(Object[]) entityManager.createNativeQuery(
 		    			  "select JAS.UP_USER_APP, JAS.UP_IS_APP, JAS.MODE_EXEC "+
@@ -456,8 +456,8 @@ import iac.grn.serviceitems.HeaderTableItem;
 		    			.setParameter(1, idApp)
 		    			.getSingleResult();  
 			 
-			 idUser=new Long(app[0].toString());
-			 idArm=new Long(app[1].toString());
+			 idUser=Long.valueOf(app[0].toString());
+			 idArm=Long.valueOf(app[1].toString());
 			 modeExec=Integer.parseInt(app[2].toString());
 			 
 			 log.info("AppAccessManager:createAccess:idUser:"+idUser);
@@ -516,7 +516,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 						   entityManager.createNativeQuery(
 				 	     		   "insert into AC_USERS_LINK_KNL_T (UP_ROLES, UP_USERS, CREATOR, CREATED) "+
 		                           "values(?, ?, ?, sysdate) ")
-				 	     		 .setParameter(1, new Long(role))
+				 	     		 .setParameter(1, Long.valueOf(role))
 				 	     		 .setParameter(2, idUser)
 				 	     		 .setParameter(3, getCurrentUser().getIdUser())
 				         	 	 .executeUpdate();
@@ -531,7 +531,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 					   entityManager.createNativeQuery(
 			 	     		   "insert into AC_USERS_LINK_KNL_T (UP_ROLES, UP_USERS, CREATOR, CREATED) "+
 	                           "values(?, ?, ?, sysdate) ")
-			 	     		 .setParameter(1, new Long(role))
+			 	     		 .setParameter(1, Long.valueOf(role))
 			 	     		 .setParameter(2, idUser)
 			 	     		 .setParameter(3, getCurrentUser().getIdUser())
 			         	 	 .executeUpdate();
@@ -568,7 +568,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 	 	     		 .setParameter(2, idApp)
 	         	 	 .executeUpdate();
 		    
-		     AppAccessItem ui = getUserItem(new Long(sessionIdAppAccess));
+		     AppAccessItem ui = getUserItem(Long.valueOf(sessionIdAppAccess));
 		     
 		     Contexts.getEventContext().set("contextBeanView", ui);
 		     
@@ -593,10 +593,10 @@ import iac.grn.serviceitems.HeaderTableItem;
 	 	     		   "where t1.ID_SRV=? ")
 	 	     		 .setParameter(1, this.rejectReason)
 	 	     		 .setParameter(2, getCurrentUser().getBaseId())
-	 	     		 .setParameter(3, new Long(sessionId))
+	 	     		 .setParameter(3, Long.valueOf(sessionId))
 	 	     	 	 .executeUpdate();
 		     
-             AppAccessItem ui = getUserItem(new Long(sessionId)); 
+             AppAccessItem ui = getUserItem(Long.valueOf(sessionId)); 
 		     
 		     Contexts.getEventContext().set("contextBeanView", ui);
 		     
@@ -620,10 +620,10 @@ import iac.grn.serviceitems.HeaderTableItem;
 	 	     		   "set t1.COMMENT_=? " +
 	 	     		   "where t1.ID_SRV=? ")
 	 	     		 .setParameter(1, this.commentText)
-	 	     		 .setParameter(2, new Long(sessionId))
+	 	     		 .setParameter(2, Long.valueOf(sessionId))
 	 	     	 	 .executeUpdate();
 		     
-           AppAccessItem ui = getUserItem(new Long(sessionId)); 
+           AppAccessItem ui = getUserItem(Long.valueOf(sessionId)); 
 		     
 		   Contexts.getEventContext().set("contextBeanView", ui);
 		     
@@ -639,7 +639,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 				        .get("sessionId");
 		     log.info("AppAccessManager:forViewCrt:sessionId:"+sessionId);
 		     
-		     AppAccessItem ui = getUserItem(new Long(sessionId));
+		     AppAccessItem ui = getUserItem(Long.valueOf(sessionId));
 	    		
 	         Contexts.getEventContext().set("contextBeanView", ui);
 		     
@@ -657,7 +657,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 		     if(sessionId!=null){
 		    	
 		     	 
-		    	 AppAccessItem ui = getUserItem(new Long(sessionId));
+		    	 AppAccessItem ui = getUserItem(Long.valueOf(sessionId));
 		        	 
 		   	 Contexts.getEventContext().set("appAccessBean", ui);
 		     }
@@ -676,7 +676,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 			     if(sessionId!=null){
 			    	
 			     	 
-			    	 AppAccessItem ui = getUserItem(new Long(sessionId));
+			    	 AppAccessItem ui = getUserItem(Long.valueOf(sessionId));
 			    	 
 			    	 this.commentText=ui.getComment();
 
@@ -712,7 +712,7 @@ import iac.grn.serviceitems.HeaderTableItem;
                             "and RL.ID_SRV=RLAPP.UP_ROLE "+
                             "and JAS.ID_SRV=? "+
 	                        "order by RL.FULL_ ")
-		    				.setParameter(1, new Long(sessionId))
+		    				.setParameter(1, Long.valueOf(sessionId))
 		    				.getResultList();
 		    		
 		    		listRolesAppForView = new ArrayList<AcRole>();
@@ -720,7 +720,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 		    		for(Object[] objectArray :lo){
 		    			 
 		    			 role=new AcRole();
-		    			 role.setIdRol(new Long(objectArray[0].toString()));
+		    			 role.setIdRol(Long.valueOf(objectArray[0].toString()));
 		    			 role.setSign(objectArray[1]!=null?objectArray[1].toString():"");
 		    			 role.setRoleTitle(objectArray[2]!=null?objectArray[2].toString():"");
 		    			 role.setRoleDescription(objectArray[3]!=null?objectArray[3].toString():"");
