@@ -170,7 +170,7 @@ import iac.grn.serviceitems.HeaderTableItem;
                for(Object[] objectArray :lo){
             	   try{
             	     ui= new AppOrgManItem(
-            	    		objectArray[0]!=null?new Long(objectArray[0].toString()):null,
+            	    		objectArray[0]!=null?Long.valueOf(objectArray[0].toString()):null,
             				objectArray[1]!=null?df.format((Date)objectArray[1]) :"",
             				objectArray[2]!=null?Integer.parseInt(objectArray[2].toString()):0,	
             				objectArray[3]!=null?objectArray[3].toString():"",
@@ -181,7 +181,7 @@ import iac.grn.serviceitems.HeaderTableItem;
             			 
 	            			objectArray[7]!=null?objectArray[7].toString():"",
 	            			 
-	            			objectArray[8]!=null?new Long(objectArray[8].toString()):null,
+	            			objectArray[8]!=null?Long.valueOf(objectArray[8].toString()):null,
 	            			 
 	            			objectArray[9]!=null?objectArray[9].toString():"",
 	            			objectArray[10]!=null?objectArray[10].toString():"",
@@ -380,7 +380,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 	        		   log.info("AppOrgManManager:getUserItem:login:"+objectArray[1].toString());
 	        		   
 	        		   ui= new AppOrgManItem(
-	        				  objectArray[0]!=null?new Long(objectArray[0].toString()):null,
+	        				  objectArray[0]!=null?Long.valueOf(objectArray[0].toString()):null,
 	            				objectArray[1]!=null?df.format((Date)objectArray[1]) :"",
 	            				objectArray[2]!=null?Integer.parseInt(objectArray[2].toString()):0,	
 	            				objectArray[3]!=null?objectArray[3].toString():"",
@@ -390,7 +390,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 	            				 
 	            				objectArray[7]!=null?objectArray[7].toString():"",
 		            			 
-		            			objectArray[8]!=null?new Long(objectArray[8].toString()):null,
+		            			objectArray[8]!=null?Long.valueOf(objectArray[8].toString()):null,
 		            			 
 		            			objectArray[9]!=null?objectArray[9].toString():"",
 		            			objectArray[10]!=null?objectArray[10].toString():"",
@@ -432,7 +432,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 				  return;
 			 }
 			   
-			 idApp =  new Long(sessionId); 
+			 idApp =  Long.valueOf(sessionId); 
 			   
 			 Object[] app=(Object[]) entityManager.createNativeQuery(
 		    			  "select JAS.UP_USER_APP, JAS.MODE_EXEC "+
@@ -441,7 +441,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 		    			.setParameter(1, idApp)
 		    			.getSingleResult();  
 			 
-			 idUser=new Long(app[0].toString());
+			 idUser=Long.valueOf(app[0].toString());
 			 modeExec=Integer.parseInt(app[1].toString());
 			 
 			 log.info("AppOrgManManager:createOrgMan:idUser:"+idUser);
@@ -485,7 +485,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 	 	     		 .setParameter(2, idApp)
 	         	 	 .executeUpdate();
 		    
-		     AppOrgManItem ui = getUserItem(new Long(sessionId));
+		     AppOrgManItem ui = getUserItem(Long.valueOf(sessionId));
 		     
 		     Contexts.getEventContext().set("contextBeanView", ui);
 		     
@@ -512,10 +512,10 @@ import iac.grn.serviceitems.HeaderTableItem;
 	 	     		   "where t1.ID_SRV=? ")
 	 	     		 .setParameter(1, this.rejectReason)
 	 	     		 .setParameter(2, getCurrentUser().getBaseId())
-	 	     		 .setParameter(3, new Long(sessionId))
+	 	     		 .setParameter(3, Long.valueOf(sessionId))
 	 	     	 	 .executeUpdate();
 		     
-             AppOrgManItem ui = getUserItem(new Long(sessionId)); 
+             AppOrgManItem ui = getUserItem(Long.valueOf(sessionId)); 
 		     
 		     Contexts.getEventContext().set("contextBeanView", ui);
 		    
@@ -541,10 +541,10 @@ import iac.grn.serviceitems.HeaderTableItem;
 	 	     		   "set t1.COMMENT_=? " +
 	 	     		   "where t1.ID_SRV=? ")
 	 	     		 .setParameter(1, this.commentText)
-	 	     		 .setParameter(2, new Long(sessionId))
+	 	     		 .setParameter(2, Long.valueOf(sessionId))
 	 	     	 	 .executeUpdate();
 		     
-           AppOrgManItem ui = getUserItem(new Long(sessionId)); 
+           AppOrgManItem ui = getUserItem(Long.valueOf(sessionId)); 
 		     
 		   Contexts.getEventContext().set("contextBeanView", ui);
 		     
@@ -560,7 +560,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 				        .get("sessionId");
 		     log.info("AppOrgManManager:forViewCrt:sessionId:"+sessionId);
 		     
-		     AppOrgManItem ui = getUserItem(new Long(sessionId));
+		     AppOrgManItem ui = getUserItem(Long.valueOf(sessionId));
 	    		
 	         Contexts.getEventContext().set("contextBeanView", ui);
 		     
@@ -578,7 +578,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 		     if(sessionId!=null){
 		    	
 		     	 
-		    	 AppOrgManItem ui = getUserItem(new Long(sessionId));
+		    	 AppOrgManItem ui = getUserItem(Long.valueOf(sessionId));
 		        	 
 		   	 Contexts.getEventContext().set("appOrgManBean", ui);
 		     }
@@ -597,7 +597,7 @@ import iac.grn.serviceitems.HeaderTableItem;
 			     if(sessionId!=null){
 			    	
 			     	 
-			    	 AppOrgManItem ui = getUserItem(new Long(sessionId));
+			    	 AppOrgManItem ui = getUserItem(Long.valueOf(sessionId));
 			    	 
 			    	 this.commentText=ui.getComment();
 
