@@ -163,7 +163,7 @@ import iac.grn.serviceitems.HeaderTableItem;
                for(Object[] objectArray :lo){
             	   try{
             	     ui= new AppBlockItem(
-            	    		objectArray[0]!=null?new Long(objectArray[0].toString()):null,
+            	    		objectArray[0]!=null?Long.valueOf(objectArray[0].toString()):null,
             				objectArray[1]!=null?df.format((Date)objectArray[1]) :"",
             				objectArray[2]!=null?Integer.parseInt(objectArray[2].toString()):0,	
             				objectArray[3]!=null?objectArray[3].toString():"",
@@ -173,7 +173,7 @@ import iac.grn.serviceitems.HeaderTableItem;
             				 
             				objectArray[7]!=null?objectArray[7].toString():"",
 	            			 
-	            			objectArray[8]!=null?new Long(objectArray[8].toString()):null,
+	            			objectArray[8]!=null?Long.valueOf(objectArray[8].toString()):null,
 	            			 
 	            			objectArray[9]!=null?objectArray[9].toString():"",
 	            			objectArray[10]!=null?objectArray[10].toString():"",
