@@ -150,7 +150,7 @@ import iac.grn.serviceitems.HeaderTableItem;
                for(Object[] objectArray :loAppMyUser){
             	   try{
             		 ui= new AppUserItem(
-            				objectArray[0]!=null?new Long(objectArray[0].toString()):null,
+            				objectArray[0]!=null?Long.valueOf(objectArray[0].toString()):null,
             				objectArray[1]!=null?df.format((Date)objectArray[1]) :"",
             				objectArray[2]!=null?Integer.parseInt(objectArray[2].toString()):0,	
             				objectArray[3]!=null?objectArray[3].toString():"",
@@ -169,7 +169,7 @@ import iac.grn.serviceitems.HeaderTableItem;
             				objectArray[15]!=null?objectArray[15].toString():"",
             				objectArray[16]!=null?objectArray[16].toString():"",
             				objectArray[17]!=null?objectArray[17].toString():"",
-            				objectArray[18]!=null?new Long(objectArray[18].toString()):null,
+            				objectArray[18]!=null?Long.valueOf(objectArray[18].toString()):null,
               			    objectArray[19]!=null?objectArray[19].toString():"",
               			    objectArray[20]!=null?objectArray[20].toString():""
             				);  
