@@ -88,7 +88,7 @@ import org.jboss.seam.log.Log;
 	   	 		    		 "select o.idUser from AcUser o,  AcLinkUserToRoleToRaion o1 " +
 	   	 		    		 "where o1.pk.acUser = o.idUser " +
 	   	 		    		 "and o1.pk.acRole = :acRole ")
-	   	 					 .setParameter("acRole", new Long(sessionId))
+	   	 					 .setParameter("acRole", Long.valueOf(sessionId))
 	   	 		      		 .getResultList();
 	   	 		 
 	   	    	      
@@ -233,7 +233,7 @@ import org.jboss.seam.log.Log;
 			   try {
 				   AcUser au = (AcUser) Component.getInstance("currentUser",ScopeType.SESSION);
 				   
-				   AcRole aum = entityManager.find(AcRole.class, new Long(sessionId));
+				   AcRole aum = entityManager.find(AcRole.class, Long.valueOf(sessionId));
 				   
 				   List<AcLinkUserToRoleToRaion> oldLinkList = aum.getAcLinkUserToRoleToRaions();
 				   
@@ -247,7 +247,7 @@ import org.jboss.seam.log.Log;
 					  if(((UserItem)user).getUsrChecked().booleanValue()){ //отмечен
 						
 						 
-						 lguu=new AcLinkUserToRoleToRaion(new Long(sessionId), user.getBaseId());
+						 lguu=new AcLinkUserToRoleToRaion(Long.valueOf(sessionId), user.getBaseId());
 						 if(oldLinkList.contains(lguu)){  
 						 
 						 }else{//нет в базе
@@ -258,13 +258,13 @@ import org.jboss.seam.log.Log;
 					   	  }
 						  
 					  }else{//не отмечен
-						 lguu=new AcLinkUserToRoleToRaion(new Long(sessionId), user.getBaseId());
+						 lguu=new AcLinkUserToRoleToRaion(Long.valueOf(sessionId), user.getBaseId());
 						 if(oldLinkList.contains(lguu)){ 
 							oldLinkList.remove(lguu);
 							entityManager.createQuery("DELETE FROM AcLinkUserToRoleToRaion gu " +
 					                  "WHERE gu.pk.acRole=:acRole " +
 					                  "and gu.pk.acUser=:acUser ")
-			                         .setParameter("acRole", new Long(sessionId))
+			                         .setParameter("acRole", Long.valueOf(sessionId))
 			                         .setParameter("acUser", user.getBaseId())
 							    .executeUpdate();
 						  }else{//в базе и так нет
@@ -445,7 +445,7 @@ import org.jboss.seam.log.Log;
           for(Object[] objectArray :lo){
        	   try{
        	     ui= new UserItem(
-       			  objectArray[0]!=null?new Long(objectArray[0].toString()):null,
+       			  objectArray[0]!=null?Long.valueOf(objectArray[0].toString()):null,
        			  objectArray[1]!=null?objectArray[1].toString():"",
        			  objectArray[2]!=null?objectArray[2].toString():"",
        			  objectArray[3]!=null?objectArray[3].toString():"",
@@ -460,7 +460,7 @@ import org.jboss.seam.log.Log;
        			  objectArray[12]!=null?objectArray[12].toString():"",
        			  objectArray[13]!=null?objectArray[13].toString():"",
        			  objectArray[14]!=null?objectArray[14].toString():"",
-       			  objectArray[15]!=null?new Long(objectArray[15].toString()):null,
+       			  objectArray[15]!=null?Long.valueOf(objectArray[15].toString()):null,
        			  objectArray[16]!=null?df.format((Date)objectArray[16]) :"",
        			  objectArray[17]!=null?objectArray[17].toString():"",
        			  objectArray[18]!=null?objectArray[18].toString():"",
@@ -469,7 +469,7 @@ import org.jboss.seam.log.Log;
        			  objectArray[21]!=null?objectArray[21].toString():"",
        			  objectArray[22]!=null?objectArray[22].toString():"",
        			  objectArray[23]!=null?objectArray[23].toString():"",
-       			  objectArray[24]!=null?new Long(objectArray[24].toString()):null
+       			  objectArray[24]!=null?Long.valueOf(objectArray[24].toString()):null
        			   );
        	  resultList.add(ui);
        	  
