@@ -54,7 +54,7 @@ import ru.spb.iac.cud.uarm.web.context.user.UserSessionBean;
 			
 			JournAppAdminUserSysBssT t1 = new JournAppAdminUserSysBssT();
 			
-			t1.setAcIsBssTLong(new Long(pidArm));
+			t1.setAcIsBssTLong(Long.valueOf(pidArm));
 			t1.setModeExec(1L); //ADD
 			t1.setStatus(0L);
 			//заявитель
