@@ -71,7 +71,7 @@ import org.slf4j.LoggerFactory;
 							.toString().isEmpty()) {
 
 				// это заявитель
-				idUser = new Long((String) request.getSession().getAttribute(
+				idUser = Long.valueOf((String) request.getSession().getAttribute(
 						"user_id_principal"));
 
 				 
