@@ -169,7 +169,7 @@ import ru.spb.iac.cud.items.UsersData;
 							.toString().isEmpty()) {
 
 				// это заявитель
-				idUser = new Long((String) request.getSession().getAttribute(
+				idUser = Long.valueOf((String) request.getSession().getAttribute(
 						"user_id_principal"));
 
 			
